# agent-forger

./: .coveragerc  .gitignore  .project-boundary  CLAUDE.md  QUICKSTART_API.md  README.md  agent_forge_demo.py  audit-all-phases.js  backup_and_validate_agent_forge.py  capture_phase6_screenshots.js  debug-dashboard.js  demo_agent_forge_training.py  package.json  pyproject.toml  pytest.ini  quietstar-audit-playwright.js  requirements.txt  requirements_api.txt  run_api_server.py  setup.py  sophisticated-features-audit.js  swarm_coordinator.py  swarm_monitor.py  test_complete_tournament.js  test_integration_complete.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: e2e-tests.yml  lint.yml  performance-benchmarks.yml  python-tests.yml
agent_forge/: __init__.py  requirements.txt  swarm_cli.py
agent_forge/api/: __init__.py  python_bridge_server.py  weight_space_extractor.py
agent_forge/docs/: README.md
agent_forge/models/: bitlinear_model.py
agent_forge/phases/: __init__.py
audit-screenshots/: audit-report.json
benchmarks/agent_forge/: run_all.py
configs/: default.yaml
docs/: AGENT-FORGE-PARALLEL-TRAINING.md  AGENT_FORGE_INTEGRATION_SUMMARY.md  AGENT_FORGE_STREAMING.md  API-INTEGRATION-GUIDE.md  API-INTEGRATION-SUMMARY.md  BACKEND_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CONSOLIDATED-ARCHITECTURE-GUIDE.md  CONSOLIDATED-REFERENCE-GUIDE.md  CONSOLIDATION-AUDIT.md  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  DOCUMENTATION-VALIDATION-REPORT.md  ERROR_RECOVERY_VALIDATION_REPORT.md  ESSENTIAL-DOCS-INDEX.md  EVOMERGE-GAP-ANALYSIS.md  FINAL_SAFETY_ASSESSMENT.md  IMPLEMENTATION_COMPLETE.md  PHASE-3-COMPLETION-REPORT.md  PHASE-7-DAY-13-CLEANUP-SUMMARY.md  PHASE-7-DAY-13-COMPLETE.md  PHASE-7-DAY-13-EMERGENCY-REMEDIATION-PLAN.md  PHASE-7-DAY-13-FINAL-HANDOFF.md  PHASE-CONTROLS.md  PHASE1-GOD-OBJECT-DECOMPOSITION-RESULTS.md  README.md  README_SWARM.md  REMEDIATION-COMPLETE.md  SAFETY_TOOLS_QUICKSTART.md  STREAMING_IMPLEMENTATION_SUMMARY.md  SWARM_DEPLOYMENT_SUMMARY.md  SYNTAX-ERROR-ELIMINATION-REPORT.md  SYNTAX_FIX_COMPREHENSIVE_REPORT.md  SYSTEM_SAFETY_ANALYSIS.md  TEST-SUITE.md  TEST_SUITE_COMPLETE.md  UI-AUDIT-REPORT.md  UI-INTEGRATION-COMPLETE.md  WEBSOCKET-INTEGRATION.md  comprehensive-audit-final-report.md  (+10 more)
docs/api/: README.md  audit-trail-api.yaml  defense-api-endpoints.md  dfars-compliance-api.yaml  security-crypto-api.yaml
docs/architecture/: system-overview.md  version-log-v2.md
docs/cleanup-reports/: focused_fix_report.json  syntax_error_scan_results.json  syntax_fix_report.json
docs/enhancement/: quality-gate-strategy.json
docs/examples/: advanced-integration.py  basic-usage.py
docs/phase-reports/: GITHUB_ACTIONS_FIX_COMPLETE.md  PHASE_3_COMPLETE.md
docs/phase5/: documentation-coverage-report.md
docs/reports/: import_update_report.txt
docs/technical/: implementation.md
examples/: agent_forge_streaming_demo.py  websocket_integration_example.py
phases/: evomerge_50gen_final_results.json
phases/cognate_evomerge_output/: evomerge_results.json
scripts/: bitnet-audit-screenshots.js  capture-bitnet-simple.js  capture_compression_ui.js  push-to-agent-forger.sh  push-to-new-repo.sh  run_tests.sh  safety_rollback_procedures.sh  setup-api-integration.sh  swarm_execution.py  swarm_init.py  validate_agent_forge.py
src/: IMPLEMENTATION_COMPLETION_REPORT.md  __init__.py  agent_forge_integration.py  api_server.py  compatibility_layer.py  constants.py  fastapi_websocket_server.py  linter_manager.py  main.py  utils.py  wealth_flow_demo.py
src/adapters/: __init__.py  (+6 more)
tests/: COMMAND_FACTORY_VALIDATION_REPORT.md  PHASE7_COMPREHENSIVE_AUDIT_REPORT.md  QUICK-START.md  VALIDATION_REPORT.md  audit_phase7_god_object_decomposition.py  audit_test.py  basic_validation.py  batch_validation_report.py  config_reality_check.py  connascence_meaning_elimination_test_report.md  desktop-automation-service.test.js  desktop-integration-test.js  integration_test_suite.py  isolated_phase7_audit.py  naming_convention_validator.py  naming_standardization_final_report.md  package.json  pattern_validation_report.json  phase1_critical_fixes.py  phase1_functional_test.py  phase4_reality_assessment_report.md  production_validation_test.py  regression_test_runner.py  requirements_integration.txt  run-tests.sh  sbom.test.js  setup.ts  simple_kill_switch_test.py  simple_test_runner.py  simplified_integration_test.py  six-sigma.test.js  standalone_facade_test.py  test-results-summary.md  test-runner.config.ts  test_agent_forge_simple.py  test_agent_forge_streaming.py  test_analyzer.py  test_analyzer_fixes.py  test_command_factory_patterns.py  test_core_functionality.py  (+23 more)
(+1203 files in other folders)
